- Added db relations - added blocks and classes to InitialDataService - improvements in ApplyTaskService